<resources>
    <string name="app_name">WalletTest</string>
    <string name="hint_input_address">To Address</string>
    <string name="hint_input_value">Input Value</string>
    <string name="hint_input_comment">Comment(Optional)</string>
    <string name="text_next">Next</string>
    <string name="home">Home</string>
    <string name="me">me</string>
    <string name="wallet">wallet</string>
    <string name="create_wallet">create wallet</string>
    <string name="send">send</string>
    <string name="receive">receive</string>
    <string name="scan">Scan</string>
</resources>